# cpp_utils

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/cpp_utils/: on_scope_leave.hpp  string.hpp
include/cpp_utils/bytes/: bytes.hpp
lib/: CMakeLists.txt  byte.cpp  stl_utils.cpp
lib/include/cpp_utils/: bytes.hpp  range.hpp  scope.hpp  stl_utils.hpp  string.cpp  string.hpp  vector.hpp
lib/include/cpp_utils/win32/: Errors.cpp  Errors.hpp
src/std_n/: preprocessor.hpp  scope.hpp  stl_utils.hpp  string.cpp
src/std_n/win32/: Errors.cpp  Errors.hpp
test/: CMakeLists.txt  Catch.hpp  main.cpp  preprocessor.cpp  scope.cpp  string.cpp
